# parrot

./: .gitignore  Cargo.toml
src/: generate.rs  list_voices.rs  main.rs  tts.rs
