[package]
name = "parrot"
version = "0.1.0"
authors = ["John Biesnecker <jbiesnecker@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
bytes = "0.5.6"
csv = "1.1.3"
fasthash = "0.4.0"
futures = "0.3.5"
itertools = "0.9.0"
rusoto_core = "0.45.0"
rusoto_polly = "0.45.0"
structopt = "0.3.16"
tokio = "0.2.22"
